# gdelts-conflict-analysis

./: .envrc.sample  .gitignore  .gitlab-ci.yml  README.md  alembic.ini  analysis.py  docker-compose.yml  pyproject.toml
deploy/: docker-compose.yml
gdelt_api/: .envrc.sample  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
gdelt_api/deploy/: Dockerfile.api  Dockerfile.frontend  docker-compose.yml
gdelt_api/local_docker_run/: docker-compose.yml
gdelt_api/src/frontend/: main.py
gdelt_api/src/gdelt_api/: main.py  schema.py
gdelt_api/src/gdelt_api/database/: __init__.py  models.py  session.py
gdelt_api/src/gdelt_api/migrations/versions/: ce8e184b3d1a_add_relations_model.py  db1a2ca65d60_add_quadclass_columns_and_indexes.py
gdelt_api/src/gdelt_api/repository/: relations_repository.py
gdelt_api/src/gdelt_api/routers/: relations_router.py
gdelt_api/src/gdelt_api/services/: relations_service.py
gdelt_frontend/: .envrc  .gitignore  Dockerfile  compose.yml  index.html  mapSetup.js  nginx.conf  nodemon.json  package-lock.json  package.json  server.js  style.css  tsconfig.json
gdelt_frontend/public/: index.html
gdelt_frontend/src/: App.css  App.tsx  UiOverlay.css  UiOverlay.tsx  api.ts  countryOperations.ts  mapSetup.ts
gdelt_frontend/src/assets/: countries.json
gdelt_frontend/src/mocks/: relationsMocks.ts
gdelt_frontend/src/types/: RelationsSchema.ts
gdelt_frontend/src/utils/: colorUtils.ts  dateUtils.ts
gdelt_script/: .flake8  GdeltNotebook_3.ipynb  analysis.py  apply_scenarios.py  config.cfg.sample  get_mft.py  main.py  names.py  process_1day.csv  pyproject.toml  utils.py
gdelt_script/scenarios/: 2020-11-13.csv  2020-11-14.csv  2020-11-15.csv  2022-3-1
gdelts_api/: main.py
gdelts_api/database/: session.py
gdelts_api/migrations/: env.py
local_docker_run/: docker-compose.yml
notebooks/: 01data_scraping.ipynb  02data_preprocessing.ipynb
src/gdelt_api/: main.py  schema.py
src/gdelt_api/database/: migrate.py  models.py
src/gdelt_api/migrations/: env.py
src/gdelt_api/migrations/versions/: ce8e184b3d1a_add_relations_model.py
src/gdelt_api/repository/: relations_repository.py
src/gdelt_api/routers/: relations_router.py
src/gdelt_api/services/: relations_service.py
