[tool.poetry]
name = "gdelts-api"
version = "0.1.0"
description = ""
authors = ["afilipovski <me@filipovski.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
pandas = "^2.2.2"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest = "^8.2.2"
pandas-stubs = "^2.2.2.240603"
sqlalchemy2-stubs = "^0.0.2a38"
types-requests = "^2.32.0.20240712"

[tool.mypy]
python_version = 3.11
files = ['gdelts_api']
disallow_untyped_defs = true
disallow_any_unimported = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["gdelts_api/database/*",
"gdelts_api/migrations/*",
"tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

