[tool.poetry]
name = "gdelt-api"
version = "0.1.0"
description = ""
authors = ["Aleksandar Filipovski <aleksandar.filipovski@codechem.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
streamlit = "^1.36.0"
seaborn = "^0.13.2"
apscheduler = "^3.10.4"
plotly = "^5.23.0"
shapely = "^2.0.5"
watchfiles = "0.21.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.10.1"
flake8 = "^7.1.0"
pytest = "^8.2.2"
black = "^24.4.2"
pandas-stubs = "^2.2.2.240603"
sqlalchemy2-stubs = "^0.0.2a38"
types-requests = "^2.32.0.20240712"
types-seaborn = "^0.13.2.20240618"
types-shapely = "^2.0.0.20240714"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.mypy]
python_version = 3.11
files = ['src']
disallow_untyped_defs = true
disallow_any_unimported = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["src/gdelt_api/database/*",
"src/gdelt_api/migrations/*",
"tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

