[tool.poetry]
name = "gdelt-script"
version = "0.1.0"
description = ""
authors = ["Aleksandar <aleksandar@filipovski.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.1"
jq = "^1.8.0"
bs4 = "^0.0.2"
tqdm = "^4.66.5"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
